--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
 [project]
-name = "nebula-nx"
-version = "0.0.2"
-description = "Very opinionated set of tools"
+name = "nx-framework"
+version = "0.0.3"
+description = "Low-level FastAPI, asyncpg and Redis framework used by Nebula Broadcast and other projects."
+authors = [
+  {name = "Martin Wacker", email = "martas@imm.cz"},
+]
+license = "MIT"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
